--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        target-hardware: esp32s3
+        target-hardware: [esp32s3]
 
 
     steps:
